# GithubPythonPoetry2

./: azure-pipelines.yml  pyproject.toml
