[tool.poetry]
name = "poetry"
version = "1.0.0"
description = "Python dependency management and packaging made easy."
authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]
license = "MIT"

readme = "README.md"

homepage = "https://python-poetry.org/"
repository = "https://github.com/python-poetry/poetry"
documentation = "https://python-poetry.org/docs"

keywords = ["packaging", "dependency", "poetry"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# Requirements
[tool.poetry.dependencies]
#python = "~2.7 || ^3.4"
pyrsistent = "^0.14.2"
requests-toolbelt = "^0.8.0"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
poetry = "poetry.console:main"


[tool.intreehooks]
build-backend = "poetry.masonry.api"


[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

known_first_party = "poetry"
known_third_party = [
    "cachecontrol",
    "cachy",
    "cleo",
    "clikit",
    "html5lib",
    "httpretty",
    "jsonschema",
    "keyring",
    "pexpect",
    "pkginfo",
    "pyparsing",
    "pytest",
    "requests",
    "requests_toolbelt",
    "shellingham",
    "tomlkit",
]


[build-system]
requires = ["intreehooks"]
build-backend = "intreehooks:loader"								
